--- a/themes/bwlp/assets/scss/bwlp/_variables.scss
+++ b/themes/bwlp/assets/scss/bwlp/_variables.scss
@@ -1,6 +1,5 @@
 // Fonts
-$sans-serif: Montserrat, 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
-$sans-serif: Montserrat, 'PT Sans', 'Segoe UI', Helvetica, Arial, sans-serif;
+$sans-serif: Open Sans, 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
 
 // Responsive breaks
 $break-extra-small: 575px;
