--- a/themes/bwlp/assets/scss/bwlp/_base.scss
+++ b/themes/bwlp/assets/scss/bwlp/_base.scss
@@ -7,7 +7,7 @@ body {
 
 html {
     font-family: $sans-serif;
-    font-size: 14px;
+    font-size: 15px;
     overflow-y: auto;
 }
 
@@ -25,17 +25,17 @@ a {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 2.5rem;
 }
 
 h2 {
-    font-size: 2rem;
-    font-weight: normal;
+    font-size: 1.25rem;
+    font-weight: regular;
 }
 
 h3 {
     font-size: 2rem;
-    font-weight: normal;
+    font-weight: light;
 }
 
 @media screen and (max-width: $break-large) {
