--- a/themes/bwlp/layouts/index.html
+++ b/themes/bwlp/layouts/index.html
@@ -9,7 +9,7 @@
 
         <div class="column right">
             <h1>{{ .Site.Author.name }}</h1>
-            <h2><a href={{ .Site.Author.link }}>{{ .Site.Author.title }}</a></h2>
+            <h2>{{ .Site.Author.title }}</h2>
             <p>{{ .Content }}</p>
 
             <div class="links">
