--- a/themes/bwlp/assets/scss/bwlp/_base.scss
+++ b/themes/bwlp/assets/scss/bwlp/_base.scss
@@ -26,16 +26,13 @@ a {
 
 h1 {
     font-size: 2.5rem;
+    font-weight: bold;
+    text-transform: capitalize;
 }
 
 h2 {
     font-size: 1.25rem;
-    font-weight: regular;
-}
-
-h3 {
-    font-size: 2rem;
-    font-weight: light;
+    font-weight: bold;
 }
 
 @media screen and (max-width: $break-large) {
