--- a/themes/bwlp/assets/scss/bwlp.scss
+++ b/themes/bwlp/assets/scss/bwlp.scss
@@ -1,4 +1,4 @@
-$color-background: {{ .Site.Params.colors.background | default "#fff" }};
+$color-background: {{ .Site.Params.colors.background | default "#FFF" }};
 $color-foreground: {{ .Site.Params.colors.foreground | default "#000" }};
 $color-hover: {{ .Site.Params.colors.hover | default "#666" }};
 
