--- a/themes/bwlp/assets/scss/bwlp/_layout.scss
+++ b/themes/bwlp/assets/scss/bwlp/_layout.scss
@@ -16,11 +16,22 @@ main {
     .column.left {
         margin-top: 0.6em;
         text-align: end;
+
+        .links {
+            margin-top: 1.0rem;
+            font-size: 1.5rem;
+
+            a {
+                margin-right: 0.5rem;
+                text-decoration: none;
+            }
+        }
+
     }
 
     .column.right {
         h1 {
-            margin-left: -10px; /* Correction for margin of leftmost character. */
+            margin-left: -5px; /* Correction for margin of leftmost character. */
             margin-bottom: 0.3em;
         }
 
