--- a/themes/bwlp/assets/scss/bwlp/_layout.scss
+++ b/themes/bwlp/assets/scss/bwlp/_layout.scss
@@ -18,8 +18,10 @@ main {
         text-align: end;
 
         .links {
-            margin-top: 1.0rem;
+            margin-top: -0.75rem;
+            margin-right:9.25rem;
             font-size: 1.5rem;
+            text-align: end;
 
             a {
                 margin-right: 0.5rem;
@@ -32,7 +34,7 @@ main {
     .column.right {
         h1 {
             margin-left: -5px; /* Correction for margin of leftmost character. */
-            margin-bottom: 0.3em;
+            margin-bottom: 0.7em;
         }
 
         h2 {
